<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_below="@id/divider5"
            android:id="@+id/titleText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:text="@string/about_title" />

        <View
            android:layout_marginTop="20dp"
            android:layout_below="@+id/titleText"
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_below="@id/divider6"
            android:id="@+id/descriptionText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="14sp"
            android:elegantTextHeight="true"
            android:text="@string/about_made_in" />

        <View
            android:id="@+id/divider4"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/buttonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider4"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_links"
                android:textColor="?attr/colorPrimary"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_source"
                android:textAlignment="center"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_original_app"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_rate_app"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_contact"
                android:textSize="14sp"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_bug"
                android:textSize="14sp"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/buttonGroup"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@+id/buttonGroup"
            android:id="@+id/disclaimer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="12sp"
            android:elegantTextHeight="true"
            android:text="@string/about_disclaimer"/>

    </RelativeLayout>
</ScrollView>